objects/Referral__c.object
<CustomObject>
    <description>Enables referral of Leads or Contacts between internal organization such as BSD and CompuCom, etc.</description>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <label>Account Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompuCom_Referral_Number__c</fullName>
        <label>CompuCom Referral Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>if(ISBLANK(First_Name__c),Last_Name__c, First_Name__c &amp; &apos; &apos; &amp; Last_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invalid_Lead_Conversion__c</fullName>
        <formula>if(Resulting_Lead__r.IsConverted &amp;&amp; ISNULL(Resulting_Lead__r.ConvertedOpportunityId) &amp;&amp; ISNULL(Resulting_Opportunity__c), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invalid Lead Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Contact Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Update_Date__c</fullName>
        <label>Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_No_Action_Reason__c</fullName>
        <label>Loss/No Action Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pipeline_Stage__c</fullName>
        <formula>if( text(Referred_To__c)=&apos;CompuCom&apos;, CASE( Opportunity_Stage__c ,&apos;Lead (Above the Funnel)&apos; , &apos;Discovery&apos;, &apos;Identify&apos;, &apos;Discovery&apos;, &apos;Qualify&apos;, &apos;Discovery&apos;, &apos;Negotiate&apos;,&apos;Advising&apos;, &apos;Propose&apos;,&apos;Propose&apos;, &apos;Contracting/Closing&apos;,&apos;Executing&apos;, &apos;Closed Won&apos;,&apos;Closed Won&apos;, &apos;Closed Lost&apos;,&apos;Lost&apos;, &apos;Closed No Action&apos;,&apos;Lost&apos;, &apos;Duplicate&apos;,&apos;Duplicate/cancelled&apos;, &apos;Not Mapped&apos;), Opportunity_Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Account_Owner__c</fullName>
        <label>Referral Account Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Number_Shared__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Referral Number (Shared)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <label>Referred By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Referral_Organizations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Referrals</relationshipLabel>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_To__c</fullName>
        <label>Referred To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Referral_Organizations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referrer_Comments__c</fullName>
        <label>Referrer Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referrer_Email__c</fullName>
        <label>Referrer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referrer_Employee_ID__c</fullName>
        <label>Referrer Employee ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Name__c</fullName>
        <label>Referrer Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_Phone__c</fullName>
        <label>Referrer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Referrer_Region__c</fullName>
        <label>Referrer Region</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rep_Email__c</fullName>
        <label>Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Rep_Name__c</fullName>
        <label>Rep Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rep_Phone__c</fullName>
        <label>Rep Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Resulting_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resulting Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Source Referrals</relationshipLabel>
        <relationshipName>Source_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resulting_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resulting Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Source Referrals</relationshipLabel>
        <relationshipName>Source_Referrals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
                <value>
                    <fullName>Ready to Submit</fullName>
                    <default>true</default>
                    <label>Ready to Submit</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Closed No Action</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <formula>If(Text(Status__c) = &apos;&apos; || Text(Status__c) = &apos;Pending Review&apos; || Text(Status__c) = &apos;Declined&apos; || Text(Status__c) = &apos;Ready to Submit&apos;, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Referral</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Referred_By__c</columns>
        <columns>Referred_To__c</columns>
        <columns>Company__c</columns>
        <columns>Contact_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Last_Update_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Referrals_received_from_CompuCom</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Referrer_Name__c</columns>
        <columns>Referred_To__c</columns>
        <columns>Resulting_Opportunity__c</columns>
        <columns>Pipeline_Stage__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Resulting_Lead__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Referred_By__c</field>
            <operation>equals</operation>
            <value>CompuCom</value>
        </filters>
        <filters>
            <field>Referred_To__c</field>
            <operation>equals</operation>
            <value>BSD</value>
        </filters>
        <label>My Referrals received from CompuCom</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Sent_Referrals_to_CompuCom</fullName>
        <columns>Company__c</columns>
        <columns>NAME</columns>
        <columns>Referrer__c</columns>
        <columns>Referrer_Email__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Referred_To__c</field>
            <operation>equals</operation>
            <value>CompuCom</value>
        </filters>
        <filters>
            <field>Referred_By__c</field>
            <operation>equals</operation>
            <value>BSD</value>
        </filters>
        <label>My Sent Referrals to CompuCom</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>REF-{000000}</displayFormat>
        <label>Referral Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <recordTypes>
        <fullName>Locked</fullName>
        <active>true</active>
        <label>Locked</label>
    </recordTypes>
    <recordTypes>
        <fullName>New</fullName>
        <active>true</active>
        <label>New</label>
    </recordTypes>
    <recordTypes>
        <fullName>Submitted_External_Destination</fullName>
        <active>true</active>
        <label>Submitted (External Destination)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Submitted_External_Source</fullName>
        <active>true</active>
        <label>Submitted (External Source)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Submitted_Internal</fullName>
        <active>true</active>
        <label>Submitted (Internal)</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>